@@ -56,6 +56,18 @@
             Assert.AreEqual("newbar", environment.GetValue("foo"));
             Assert.AreEqual("newbar", parent.GetValue("foo"));
         }
+
+        [TestMethod]
+        public void SetLocalValue()
+        {
+            BindingEnvironment parent = new BindingEnvironment();
+            parent.SetValue("foo", "bar");
+            BindingEnvironment environment = new BindingEnvironment(parent);
+            environment.SetLocalValue("foo", "newbar");
+
+            Assert.AreEqual("newbar", environment.GetValue("foo"));
+            Assert.AreEqual("bar", parent.GetValue("foo"));
+        }
     }
 }
 
