@@ -1,0 +1,13 @@
+﻿namespace AjLanguage.Commands
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public class FunctionStatus
+    {
+        public bool Returned { get; set; }
+        public object ReturnValue { get; set; }
+    }
+}
